# Adaptive-Multi-Tenant-Inference-Server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.cache/clangd/index/: continuous_batch_engine.cpp.FE3B18B0D2FB711B.idx  continuous_batch_engine.h.E4E57C14F1B3579F.idx  httplib.h.AE493BECAE5D1042.idx  kv_slot_manager.cpp.A64741FF7B9F638F.idx  kv_slot_manager.h.97A5B541DBDD031A.idx  llm_inference.cpp.3872EDA3E74138FF.idx  llm_inference.h.D32023E85AF92BEB.idx  main.cpp.F81A92F02AED5E69.idx  metrics.cpp.15D430549F6EB1F7.idx  metrics.h.0B38DFE52D0C1B4C.idx  rate_limiter.cpp.58485F5970C1F6ED.idx  rate_limiter.h.8D20BD4BA17A4231.idx  request.cpp.90C47049FE5E3639.idx  request.h.DEBA8DB9CED9DEEB.idx  request_queue.cpp.B47BBB7FB5A1A7C8.idx  request_queue.h.549F562310E2BD02.idx  scheduler.cpp.EE52A2FCCADE9131.idx  scheduler.h.67598BADE5A8BE10.idx  server.cpp.934EE5A3FC07528E.idx  server.h.B54F6CBE9AD4293D.idx  test_kv_slot_manager.cpp.4706AFBD915F7C91.idx  test_rate_limiter.cpp.EFBC50A1CBEF6AAB.idx  test_request_queue.cpp.969556781797DBFE.idx  test_scheduler.cpp.1D3DD3896DF1CC24.idx  test_server.cpp.B158E97B143C3A11.idx  test_worker_pool.cpp.2D8EB2F473F8523D.idx  worker_pool.cpp.F9AA725BEB364A53.idx  worker_pool.h.F1E36447C4505A1C.idx
bench/: infer.lua  run_bench.sh
docker/: docker-compose.yml  grafana_dashboard.json  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboard.yaml
docker/grafana/provisioning/datasources/: prometheus.yaml
include/: continuous_batch_engine.h  grpc_server.h  kv_slot_manager.h  llm_inference.h  metrics.h  rate_limiter.h  request.h  request_queue.h  scheduler.h  server.h  worker_pool.h
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  redis.yaml  service.yaml
proto/: inference.proto
scripts/: download_model.sh
src/: continuous_batch_engine.cpp  grpc_server.cpp  kv_slot_manager.cpp  llm_inference.cpp  main.cpp  metrics.cpp  rate_limiter.cpp  request.cpp  request_queue.cpp  scheduler.cpp  server.cpp  worker_pool.cpp
tests/: test_kv_slot_manager.cpp  test_rate_limiter.cpp  test_request_queue.cpp  test_scheduler.cpp  test_server.cpp  test_worker_pool.cpp
